# study

./: .gitignore  README.md  ReadMe
algorithm/: GrahamScan.cpp  README.md  find_farest_point_pair.cpp  infix2postfix.cpp  quake_sqrt.cpp
assembler/: exp1.cpp
avx/: exp1.cpp  exp2.cpp  test_fma.cpp  test_funcs.cpp
bfd/: README.md  test.cpp
boost/: Makefile  test_lexicalcase.cpp  test_tokenizer.cpp
c_c++/: free_test.cpp  object_only_on_heap.cpp  object_only_on_stack.cpp  test_NULL.cpp  test_alloca.cpp  test_atomic.cpp  test_binary_function.cpp  test_bind.cpp  test_bind1st.cpp  test_calloc.cpp  test_character_set.cpp  test_decimal.cpp  test_decltype  test_decltype.cpp  test_define.cpp  test_distance.cpp  test_enum_class.cpp  test_function.cpp  test_iomanip.cpp  test_iterator_traits.cpp  test_list.cpp  test_math.cpp  test_memcpy.cpp  test_nullptr.cpp  test_numeric_limits.cpp  test_placement_new.cpp  test_plus.cpp  test_printf.cpp  test_rand.cpp  test_reverse.cpp  test_reverse_copy.cpp  test_set_new_handler.cpp  test_ssize.cpp  test_static_assert.cpp  test_strchr.cpp  test_thread_yield.cpp  test_throw.cpp  test_type_convert.cpp  test_union.cpp  test_unordered_set.cpp  (+2 more)
ceres/: CMakeLists.txt  example.cpp
ceres/ceres-solver-2.2.0/: VERSION
ceres/ceres-solver-2.2.0/internal/ceres/: parallel_vector_operations_benchmark.cc
character_encoding/: chinese_utf16.txt
character_set/: README.md
cmake/tutorial/step1/exp3/: CMakeLists.txt  tutorial.cpp
computer_architecture/: README.md
dtrace/: exp1.cpp  out.profile  output.txt
eigen/: CMakeLists.txt  example.cpp
experta/: exp1.py  zebra.py
flatbuffer/: exp1.cpp  player.fbs
flatbuffers/: player.json  player_generated.h
gflags/: test.cpp
gperftools/: build.sh  main.cpp
html/: test_pound_sign.html
icp_alg/: icp.py
ipywidgets/: test.py
jsoncpp/: Makefile  test_writer.cpp
jupyter/: README.md  hello_world.ipynb
keras/: number_addition.py
langchain/: build_an_agent.ipynb  chatbot_using_langgraph.ipynb  create_a_rag.ipynb  exp1.ipynb  faiss_learning.ipynb  langgraph_with_tools.ipynb  requirements.txt  tavily_learning.ipynb  test_openai_embedding.py  中国社会各阶级的分析.txt
leveldb/: Makefile  test.cpp
libunwind/: test.cpp
linux/: address_test.cpp  ftok_test.cpp  getrusage_test.cpp  rlimit_test.cpp  test_asio.cpp  test_assert.cpp  test_eventfd.cpp  test_getuid.cpp  test_iovec.cpp  test_mkdir.cpp  test_pipe.cpp  test_rlimit.cpp  test_sleep.cpp
lizard/: README.md  exp1.cpp  exp1.plist
matplotlib/: categorical_variables.py  color_test.py  figlegend_demo.py  pcolormesh_levels.py  simple_plot.py  (+8 more)
oauth/: QUICKSTART.md  README.md  SUMMARY.md  auth_server.py  client_app.py  demo.py  pyproject.toml
simdjson/exp1/: CMakeLists.txt  main.cpp  simdjson-master  twitter.json
textbook_impl/agentic_design_patterns/: AGENTS.md  build_pdf_vector_db.py  pdf_extracted_text.json  pyproject.toml
textbook_impl/agentic_design_patterns/.qoder/skills/write-textbook-chapter-example/: SKILL.md
textbook_impl/agentic_design_patterns/ch1/: exp1.py
textbook_impl/agentic_design_patterns/ch10/: exp1.py  exp2.py  exp3.py  jsonrpc_server.py  mcp_server.py  mcp_server_sse.py
textbook_impl/agentic_design_patterns/ch11_goal_setting_and_monitoring/: README.md  exp1.py  exp2.py
textbook_impl/agentic_design_patterns/ch16/: exp1.py
textbook_impl/agentic_design_patterns/ch17/: exp1.py
textbook_impl/agentic_design_patterns/ch2/: exp1.py
textbook_impl/agentic_design_patterns/ch20/: exp1.py
textbook_impl/agentic_design_patterns/ch3/: exp1.py
textbook_impl/agentic_design_patterns/ch4/: exp1.py
textbook_impl/agentic_design_patterns/ch5/: exp1.py
textbook_impl/agentic_design_patterns/ch6/: exp1.py
textbook_impl/agentic_design_patterns/ch7/: exp1.py
textbook_impl/agentic_design_patterns/ch8/: exp1.py
textbook_impl/agentic_design_patterns/ch9/: exp1.py
(+1316 files in other folders)
